--- a/client/src/components/styles/SearchArea.scss
+++ b/client/src/components/styles/SearchArea.scss
@@ -2,17 +2,22 @@
 	font-family: "Open Sans", sans-serif;
 }
 
+.searcharea-section {
+
+}
+
 .search-area-container {
 	width: 100%;
-	height: 100%;
+	height: auto;
 	display: flex;
 	flex-direction: row;
 	background-color: var(--main_gray);
 
 	.search-filters {
 		height: 100%;
-		width: 30%;
-		padding: 20px;
+		width: 25%;
+		min-width: 320px;
+		padding: 10px;
 		display: flex;
 		flex-direction: row;
 		flex-wrap: wrap;
@@ -27,25 +32,30 @@
 				font-weight: bold;
 			}
 			.desc-text {
-				font-size: 14pt;
+				font-size: 11pt;
+				// font-weight: bold;
+				padding: 10px;
 			}
 		}
 
 		.filter-section {
+			width: 100%;
 			.filter-title {
 				color: white;
-				margin: 20px 10px;
+				margin: 15px 0px 0 10px;
+				justify-self: flex-start;
 			}
 			.filter-options {
 				flex-wrap: wrap;
 				// border: 1px solid white;
 				padding: 6px;
-				.filter-div {
+				.filter-button {
 					text-align: center;
 					margin: 1px;
 					width: 20%;
 					flex-grow: 1;
-					padding: 8px 8px;
+					font-size: 11pt;
+					padding: 5px 5px;
 					background-color: rgb(30, 30, 30);
 					color: white;
 					transition: 100ms all ease-in-out;
@@ -55,6 +65,14 @@
 						background-color: rgb(184, 27, 79);
 					}
 				}
+
+				.active {
+					background: linear-gradient(-5deg, #BA3E3F, rgba(235, 69, 110, 1));
+				}
+
+				.location-button {
+					padding: 4px;
+				}
 			}
 		}
 	}
@@ -62,6 +80,14 @@
 	.search-results {
 		height: 100%;
 		width: 50%;
+		align-items: center;
+		
+		.search-results-nav {
+			width: 90%;
+			height: 60px;
+			align-items: center;
+			justify-content: flex-start;
+		}
 	}
 
 	.sidebar {
