--- a/client/src/components/styles/SearchArea.scss
+++ b/client/src/components/styles/SearchArea.scss
@@ -15,7 +15,7 @@
 
 	.search-filters {
 		height: 100%;
-		width: 25%;
+		width: 20%;
 		min-width: 320px;
 		padding: 10px;
 		display: flex;
@@ -79,19 +79,44 @@
 
 	.search-results-container {
 		height: 100%;
-		width: 50%;
+		width: 65%;
 		align-items: center;
+		padding: 0 20px;
 		
 		.search-results-nav {
-			width: 90%;
+			width: 100%;
 			height: 60px;
 			align-items: center;
 			justify-content: flex-start;
 		}
+
+		.search-results-items {
+			width: 100%;
+			flex-wrap: wrap;
+			justify-content: flex-start;
+			.search-results-item {
+				width: 300px;
+				height: 150px;
+				color: black;
+				padding: 20px 20px;
+				margin: 10px 5px;
+				background: #222;
+				border-radius: 5px;
+				text-align: center;
+				font-size: 12pt;
+				color: white;
+
+				.university-title {
+					position: relative;
+					width: auto;
+					top: 40%;
+				}
+			}
+		}
 	}
 
-	.sidebar {
+	.sidebar-container {
 		height: 100%;
-		width: 20%;
+		width: 15%;
 	}
 }
