--- a/client/src/components/styles/SearchArea.scss
+++ b/client/src/components/styles/SearchArea.scss
@@ -95,21 +95,46 @@
 			flex-wrap: wrap;
 			justify-content: flex-start;
 			.search-results-item {
-				width: 300px;
-				height: 150px;
+				width: 320px;
+				height: 180px;
 				color: black;
-				padding: 20px 20px;
 				margin: 10px 5px;
 				background: #222;
 				border-radius: 5px;
 				text-align: center;
 				font-size: 12pt;
 				color: white;
+				position: relative;
+
+				.thumbnail-image {
+					position: absolute;
+					border-radius: 6px;
+					top: 0;
+					left: 0;
+					margin: 0;
+					padding: 0;
+					width: 100%;
+					height: 100%;
+				}
 
 				.university-title {
 					position: relative;
+					font-weight: bold;
 					width: auto;
 					top: 40%;
+				}
+
+				.overall-rating {
+					position: relative;
+					width: auto;
+					top: 42%;
+					img {
+						width: 20px;
+						margin: 0 5px;
+					}
+					span {
+						margin: 0 5px;
+					}
 				}
 			}
 		}
