--- a/client/src/components/styles/SearchArea.scss
+++ b/client/src/components/styles/SearchArea.scss
@@ -104,30 +104,26 @@
 				text-align: center;
 				font-size: 12pt;
 				color: white;
-				position: relative;
+				// position: relative;
+				transition: 100ms all ease-in-out;
 
-				.thumbnail-image {
-					position: absolute;
-					border-radius: 6px;
-					top: 0;
-					left: 0;
-					margin: 0;
-					padding: 0;
-					width: 100%;
-					height: 100%;
+				// background image styles.
+				flex-direction: column;
+				background-size: cover; /* for IE9+, Safari 4.1+, Chrome 3.0+, Firefox 3.6+ */
+				-webkit-background-size: cover; /* for Safari 3.0 - 4.0 , Chrome 1.0 - 3.0 */
+				-moz-background-size: cover; /* optional for Firefox 3.6 */ 
+				-o-background-size: cover; /* for Opera 9.5 */
+				overflow: hidden;
+
+				&:hover {
+					transform: scale(1.025);
 				}
 
 				.university-title {
-					position: relative;
 					font-weight: bold;
-					width: auto;
-					top: 40%;
 				}
 
 				.overall-rating {
-					position: relative;
-					width: auto;
-					top: 42%;
 					img {
 						width: 20px;
 						margin: 0 5px;
