background images for search results

--- a/client/src/components/styles/SearchArea.scss
+++ b/client/src/components/styles/SearchArea.scss
@@ -103,7 +103,8 @@
 				border-radius: 5px;
 				text-align: center;
 				font-size: 12pt;
-				color: white;
+				color: #fff;
+				text-shadow: 1px 1px 0 rgba(0,0,0,0.35), 1px 1px 5px rgba(0,0,0,0.5);
 				// position: relative;
 				transition: 100ms all ease-in-out;
 
