--- a/client/src/components/styles/Nav.scss
+++ b/client/src/components/styles/Nav.scss
@@ -1,7 +1,7 @@
 nav {
 	width: 100%;
 	min-height: 6vh;
-	background-color: var(--main_gray);
+	background-color: var(--main_light_gray);
 	border-bottom: 1px solid rgb(50, 50, 50);
 	font-family: "Open Sans", sans-serif;
 }
