--- a/client/src/components/styles/SearchArea.scss
+++ b/client/src/components/styles/SearchArea.scss
@@ -21,7 +21,7 @@
 		display: flex;
 		flex-direction: row;
 		flex-wrap: wrap;
-		background-color: rgb(40, 40, 40);
+		background-color: var(--main_light_gray);
 
 		.filters-title {
 			color: white;
@@ -41,22 +41,31 @@
 		.filter-section {
 			width: 100%;
 			.filter-title {
+				align-self: flex-start;
 				color: white;
+				background-color: rgb(30, 30, 30);
+				// position: absolute;
+				padding: 0 10px;
+				border-top-left-radius: 4px;
+				border-top-right-radius: 4px;
 				margin: 15px 0px 0 10px;
 				justify-self: flex-start;
 			}
 			.filter-options {
+				border-radius: 10px;
 				flex-wrap: wrap;
-				// border: 1px solid white;
-				padding: 6px;
+				background-color: rgb(30, 30, 30);
+				padding: 8px;
 				.filter-button {
+					border: 1px solid rgb(20, 20, 20);
 					text-align: center;
-					margin: 1px;
-					width: 20%;
+					margin: 0px;
+					border-radius: 2px;
+					width: 25%;
 					flex-grow: 1;
-					font-size: 11pt;
-					padding: 5px 5px;
-					background-color: rgb(30, 30, 30);
+					font-size: 10pt;
+					padding: 5px;
+					background-color: rgb(39, 39, 39);
 					color: white;
 					transition: 100ms all ease-in-out;
 
@@ -65,11 +74,7 @@
 						background-color: rgb(184, 27, 79);
 					}
 				}
-
-				.active {
-					background: linear-gradient(-5deg, #BA3E3F, rgba(235, 69, 110, 1));
-				}
-
+				
 				.location-button {
 					padding: 4px;
 				}
@@ -140,5 +145,11 @@
 	.sidebar-container {
 		height: 100%;
 		width: 15%;
+	}
+}
+
+@media only screen and (max-width: 768px) {
+	.search-area-container {
+		flex-direction: column;
 	}
 }
