--- a/client/src/components/styles/UniversityDataModal.scss
+++ b/client/src/components/styles/UniversityDataModal.scss
@@ -1,4 +1,4 @@
-.modal {
+.data-modal {
 	justify-content: flex-start;
 	padding: 0;
 	width: 85%;
@@ -47,7 +47,7 @@
 	}
 	.header-message-container {
 		color: white;
-		font-size: 14pt;
+		font-size: 12pt;
 		align-items: center;
 		margin: 12px 0;
 
@@ -76,11 +76,13 @@
 			// background-color: rgb(68, 68, 68);
 			width: 46%;
 			align-items: center;
+			height: auto;
 			// margin: 10px;
 			padding: 1.2% 2%;
 			border-top: 2px solid rgba(109, 109, 109, 0.2);
 
 			.rating-title {
+				font-size: 11pt;
 				color: white;
 			}
 
@@ -111,7 +113,7 @@
 
 			.rating-bar-container {
 				width: 160px;
-				height: 15px;
+				height: 10px;
 				// margin-right: 30px;
 				position: relative;
 				background-color: rgb(196, 196, 196);
