--- a/client/src/components/styles/HomePage.scss
+++ b/client/src/components/styles/HomePage.scss
@@ -16,7 +16,7 @@
 			content: "";
 			bottom: 0px;
 			z-index: 1;
-			height: 225px;
+			height: 170px;
 			width: 100%;
 			background-image: url("../../resources/homepage/wave-bottom.svg");
 		}
@@ -127,7 +127,6 @@
 							background-color: rgb(235, 69, 110);
 
 							&:hover {
-								height: 100%;
 								color: white;
 								background: linear-gradient(-5deg, #BA3E3F, rgba(235, 69, 110, 1));
 								border: none;
@@ -141,6 +140,31 @@
 					}
 				}
 			}
+		}
+	}
+}
+
+@media only screen and (max-width: 768px) {
+	.main-content-container {
+		padding: 0;
+		margin: 0 !important;
+		flex-direction: column;
+		justify-content: space-between;
+		align-items: center;
+		width: 100% !important;
+		height: auto;
+
+		.main-text {
+			width: 90% !important;
+			.title-text {
+				font-size: 22pt !important;
+			}
+			.desc-text {
+				font-size: 15pt !important;
+			}
+		}
+		.main-signup {
+			margin-top: 50px;
 		}
 	}
 }
