--- a/client/src/components/styles/SearchArea.scss
+++ b/client/src/components/styles/SearchArea.scss
@@ -12,141 +12,153 @@
 	display: flex;
 	flex-direction: row;
 	background-color: var(--main_gray);
+}
 
-	.search-filters {
-		height: 100%;
-		width: 20%;
-		min-width: 320px;
-		padding: 10px;
-		display: flex;
-		flex-direction: row;
-		flex-wrap: wrap;
-		background-color: var(--main_light_gray);
+.search-filters {
+	height: 100%;
+	width: 20%;
+	min-width: 320px;
+	padding: 10px;
+	display: flex;
+	flex-direction: row;
+	flex-wrap: wrap;
+	background-color: var(--main_light_gray);
 
-		.filters-title {
-			color: white;
+	.filters-title {
+		color: white;
 
-			.title-text {
-				margin-bottom: 16px;
-				font-size: 13pt;
-				font-weight: bold;
-			}
-			.desc-text {
-				font-size: 11pt;
-				// font-weight: bold;
-				padding: 10px;
-			}
+		.title-text {
+			margin-bottom: 16px;
+			font-size: 13pt;
+			font-weight: bold;
 		}
-
-		.filter-section {
-			width: 100%;
-			.filter-title {
-				align-self: flex-start;
-				color: white;
-				background-color: rgb(30, 30, 30);
-				// position: absolute;
-				padding: 0 10px;
-				border-top-left-radius: 4px;
-				border-top-right-radius: 4px;
-				margin: 15px 0px 0 10px;
-				justify-self: flex-start;
-			}
-			.filter-options {
-				border-radius: 10px;
-				flex-wrap: wrap;
-				background-color: rgb(30, 30, 30);
-				padding: 8px;
-				.filter-button {
-					border: 1px solid rgb(20, 20, 20);
-					text-align: center;
-					margin: 0px;
-					border-radius: 2px;
-					width: 25%;
-					flex-grow: 1;
-					font-size: 10pt;
-					padding: 5px;
-					background-color: rgb(39, 39, 39);
-					color: white;
-					transition: 100ms all ease-in-out;
-
-					&:hover {
-						cursor: pointer;
-						background-color: rgb(184, 27, 79);
-					}
-				}
-				
-				.location-button {
-					padding: 4px;
-				}
-			}
+		.desc-text {
+			font-size: 11pt;
+			// font-weight: bold;
+			padding: 10px;
 		}
 	}
 
-	.search-results-container {
-		height: 100%;
-		width: 65%;
-		align-items: center;
-		padding: 0 20px;
-		
-		.search-results-nav {
-			width: 100%;
-			height: 60px;
-			align-items: center;
-			justify-content: flex-start;
+	.filter-section {
+		width: 100%;
+		.filter-title {
+			align-self: flex-start;
+			color: white;
+			background-color: rgb(30, 30, 30);
+			// position: absolute;
+			padding: 0 10px;
+			border-top-left-radius: 4px;
+			border-top-right-radius: 4px;
+			margin: 15px 0px 0 10px;
+			justify-self: flex-start;
 		}
-
-		.search-results-items {
-			width: 100%;
+		.filter-options {
+			border-radius: 10px;
 			flex-wrap: wrap;
-			justify-content: flex-start;
-			.search-results-item {
-				width: 320px;
-				height: 180px;
-				color: black;
-				margin: 10px 5px;
-				background: #222;
-				border-radius: 5px;
+			background-color: rgb(30, 30, 30);
+			padding: 8px;
+			.filter-button {
+				border: 1px solid rgb(20, 20, 20);
 				text-align: center;
-				font-size: 12pt;
-				color: #fff;
-				text-shadow: 1px 1px 0 rgba(0,0,0,0.35), 1px 1px 5px rgba(0,0,0,0.5);
-				// position: relative;
+				margin: 0px;
+				border-radius: 2px;
+				width: 25%;
+				flex-grow: 1;
+				font-size: 10pt;
+				padding: 5px;
+				background-color: rgb(39, 39, 39);
+				color: white;
 				transition: 100ms all ease-in-out;
 
-				// background image styles.
-				flex-direction: column;
-				background-size: cover; /* for IE9+, Safari 4.1+, Chrome 3.0+, Firefox 3.6+ */
-				-webkit-background-size: cover; /* for Safari 3.0 - 4.0 , Chrome 1.0 - 3.0 */
-				-moz-background-size: cover; /* optional for Firefox 3.6 */ 
-				-o-background-size: cover; /* for Opera 9.5 */
-				overflow: hidden;
-
 				&:hover {
-					transform: scale(1.025);
+					cursor: pointer;
+					background-color: rgb(184, 27, 79);
 				}
+			}
+			
+			.location-button {
+				padding: 4px;
+			}
+		}
+	}
+}
 
-				.university-title {
-					font-weight: bold;
+.search-results-container {
+	height: 100%;
+	width: 65%;
+	align-items: center;
+	padding: 0 20px;
+	
+	.search-results-nav {
+		width: 100%;
+		height: 60px;
+		align-items: center;
+		justify-content: flex-start;
+	}
+
+	.search-results-items {
+		width: 100%;
+		flex-wrap: wrap;
+		justify-content: flex-start;
+		.search-results-item {
+			width: 350px;
+			height: 200px;
+			color: black;
+			margin: 10px 5px;
+			background: #222;
+			border-radius: 5px;
+			text-align: center;
+			font-size: 13pt;
+			color: #fff;
+			text-shadow: 1px 1px 0 rgba(0,0,0,0.35), 1px 1px 5px rgba(0,0,0,0.5);
+			// position: relative;
+			transition: 100ms all ease-in-out;
+			position: relative;
+
+			// background image styles.
+			flex-direction: column;
+			background-size: cover; /* for IE9+, Safari 4.1+, Chrome 3.0+, Firefox 3.6+ */
+			-webkit-background-size: cover; /* for Safari 3.0 - 4.0 , Chrome 1.0 - 3.0 */
+			-moz-background-size: cover; /* optional for Firefox 3.6 */ 
+			-o-background-size: cover; /* for Opera 9.5 */
+			overflow: hidden;
+
+			&:hover {
+				transform: scale(1.025);
+			}
+
+			.weather-container {
+				position: absolute;
+				top: 15px;
+				right: 15px;
+				width: 10%;
+				.degrees {
+					font-size: 14pt;	
 				}
+			}
 
-				.overall-rating {
-					img {
-						width: 20px;
-						margin: 0 5px;
-					}
-					span {
-						margin: 0 5px;
-					}
+			.university-title {
+				font-weight: bold;
+			}
+
+			.overall-rating {
+				img {
+					width: 20px;
+					margin: 0 5px;
+				}
+				span {
+					margin: 0 5px;
 				}
 			}
 		}
 	}
-
-	.sidebar-container {
-		height: 100%;
-		width: 15%;
-	}
 }
+
+.sidebar-container {
+	height: 100%;
+	width: 15%;
+}
+
 
 @media only screen and (max-width: 768px) {
 	.search-area-container {
