--- a/client/src/components/styles/FeedbackModal.scss
+++ b/client/src/components/styles/FeedbackModal.scss
@@ -102,6 +102,24 @@
 				justify-content: flex-start;
 				justify-content: center;
 
+				.rows-container {
+					.data-col {
+						.data-row {
+							.data-input {
+								background-color: rgb(150, 150, 150);
+								width: 50%;
+								padding: 5px 10px;
+								border: none;
+								
+								&:focus {
+									outline: none;
+									border-bottom: 1px solid rgb(160, 10, 68);
+								}
+							}
+						}
+					}
+				}
+
 				.tags-menu {
 					background-color: var(--main_light_gray);
 					pointer-events: none;
