--- a/client/src/components/styles/SearchArea.scss
+++ b/client/src/components/styles/SearchArea.scss
@@ -128,12 +128,14 @@
 			}
 
 			.weather-container {
+				align-items: center;
 				position: absolute;
 				top: 15px;
 				right: 15px;
-				width: 10%;
+				width: 30%;
 				.degrees {
-					font-size: 14pt;	
+					font-size: 14pt;
+					margin-right: 10px;
 				}
 			}
 
