--- a/client/src/components/styles/UniversityDataModal.scss
+++ b/client/src/components/styles/UniversityDataModal.scss
@@ -33,7 +33,7 @@
 		// background-color: white;
 		border-bottom: 2px gray solid;
 		width: 100%;
-		.tab-button {
+		.data-modal-tab-button {
 			font-weight: normal;
 			padding: 10px;
 			color: gray;
@@ -69,6 +69,9 @@
 	}
 	
 	.tab-container {
+		opacity: 0;
+		// position: relative;
+		display: none;
 		flex-wrap: wrap;
 		justify-content: flex-start;
 		justify-content: center;
@@ -171,7 +174,7 @@
 						padding: 5px 10px;
 						overflow-x: hidden;
 					}
-					.data-value {
+					.datatab-data-value {
 						background-color: gray;
 						width: 50%;
 						padding: 5px 10px;
