--- a/client/src/components/styles/FeedbackModal.scss
+++ b/client/src/components/styles/FeedbackModal.scss
@@ -12,10 +12,9 @@
 	min-width: 652px;
 
 	.feedback-col {
-		background: var(--main_gray);
+		background: rgb(41, 41, 41);
 		width: 500px;
 		padding: 20px;
-		border: 1px solid rgb(220, 220, 220);
 		border-top-left-radius: 5px;
 		border-bottom-left-radius: 5px;
 		width: 25%;
