--- a/client/src/components/styles/JoinModal.scss
+++ b/client/src/components/styles/JoinModal.scss
@@ -64,74 +64,88 @@
 
 		.signup-form-container {
 			align-items: center;
-			margin: 15px;
+			margin: 0 15px;
 
-			.input-field {
-				width: 70%;
-				margin-top: 16px;
-				.signup-header {
-					color:  rgb(201, 201, 201);
-					justify-content: flex-start;
-					font-size: 11pt;
-					font-family: "Ubuntu", sans-serif;
-					letter-spacing: 1px;
-				}
-				.signup-input {
-					color: white;
-					padding: 15px 6px;
-					font-size: 11pt;
-					width: 100%;
-					background-color: transparent;
-					border: 1px solid rgb(150, 150, 150);
-					border-radius: 3px;
-					margin-top: 8px;
-
-					&:focus {
-						outline: none;
-					}
-				}
-			}
-			.email-sub {
-				color: white;
+			.signup-form {
+				width: 100%;
 				align-items: center;
-				padding: 10px;
-				margin: 15px;
-				margin-bottom: 0;
-				font-size: 11pt;
-				width: 70%;
-				justify-content: flex-start;
 
-				.input-checkbox {
-					-webkit-appearance: none;
-					background-color: #fafafa;
-					border: 1px solid #cacece;
-					box-shadow: 0 1px 2px rgba(0,0,0,0.05), inset 0px -15px 10px -12px rgba(0,0,0,0.05);
-					padding: 9px;
-					border-radius: 3px;
-					display: inline-block;
-					position: relative;
-					margin-right: 30px;
-
-					&:focus {
-						outline: none;
+				.form-row {
+					width: 70%;
+					margin-top: 16px;
+					.signup-header {
+						color:  rgb(201, 201, 201);
+						justify-content: flex-start;
+						font-size: 11pt;
+						font-family: "Ubuntu", sans-serif;
+						letter-spacing: 1px;
 					}
+					.signup-input {
+						color: white;
+						padding: 15px 6px;
+						font-size: 11pt;
+						width: 100%;
+						background-color: transparent;
+						border: 1px solid rgb(150, 150, 150);
+						border-radius: 3px;
+						margin-top: 8px;
 
-					&:active {
-						box-shadow: 0 1px 2px rgba(0,0,0,0.05), inset 0px 1px 3px rgba(0,0,0,0.1);
+						&:focus {
+							outline: none;
+						}
 					}
-					&:checked {
-						background: linear-gradient(90deg, #BA3E3F, rgba(235, 69, 110, 1));
-						border: 1px solid rgba(235, 69, 110, 1);
-						box-shadow: 0 1px 2px rgba(0,0,0,0.05), inset 0px -15px 10px -12px rgba(0,0,0,0.05), inset 15px 10px -12px rgba(255,255,255,0.1);
-						color: #4689bd;
+					.error {
+						color: rgb(170, 79, 79);
+						font-size: 10pt;
+					}
+				}
+				.email-sub {
+					color: white;
+					align-items: center;
+					padding: 10px;
+					margin: 15px;
+					margin-bottom: 0;
+					font-size: 11pt;
+					width: 70%;
+					justify-content: flex-start;
 
-						&:after {
-							content: '\2714';
-							font-size: 14px;
-							position: absolute;
-							top: -1px;
-							left: 3px;
-							color: white;
+					.input-checkbox {
+						-webkit-appearance: none;
+						background-color: #fafafa;
+						border: 1px solid #cacece;
+						box-shadow: 0 1px 2px rgba(0,0,0,0.05), inset 0px -15px 10px -12px rgba(0,0,0,0.05);
+						padding: 9px;
+						border-radius: 3px;
+						display: inline-block;
+						position: relative;
+						margin-right: 30px;
+						transition: 100ms all ease-in-out;
+
+						&:hover {
+							background: rgb(82, 82, 82);
+						}
+
+						&:focus {
+							outline: none;
+						}
+
+						&:active {
+							box-shadow: 0 1px 2px rgba(0,0,0,0.05), inset 0px 1px 3px rgba(0,0,0,0.1);
+						}
+						&:checked {
+							background: linear-gradient(90deg, #BA3E3F, rgba(235, 69, 110, 1));
+							border: 1px solid rgba(235, 69, 110, 1);
+							box-shadow: 0 1px 2px rgba(0,0,0,0.05), inset 0px -15px 10px -12px rgba(0,0,0,0.05), inset 15px 10px -12px rgba(255,255,255,0.1);
+							color: #4689bd;
+
+							&:after {
+								content: '\2714';
+								font-size: 14px;
+								position: absolute;
+								top: -1px;
+								left: 3px;
+								color: white;
+							}
 						}
 					}
 				}
@@ -209,6 +223,17 @@
 						font-size: 12pt;
 						text-align: center;
 						margin: 16px 0;
+					}
+
+					.info-bar {
+						color: rgb(30,30,30);
+						background: linear-gradient(rgba(235, 69, 110, 1), #BA3E3F);
+						padding: 5px;
+						margin: 16px 0;
+						font-weight: bold;
+						width: 90%;
+						font-size: 11pt;
+						text-align: center;
 					}
 
 					.title-text {
