--- a/client/src/components/styles/FeedbackModal.scss
+++ b/client/src/components/styles/FeedbackModal.scss
@@ -28,9 +28,12 @@
 			font-size: 13pt;
 		}
 		.desc-text {
+			text-align: center;
+			background-color: rgb(65, 65, 65);
+			padding: 10px;
+			margin: 10px 0;
 			font-size: 11pt;
-			color: rgb(150, 150, 150);
-			font-weight: bold;
+			color: rgb(196, 196, 196);
 			margin-top: 10px;
 		}
 	}
@@ -177,11 +180,27 @@
 					// background-color: rgb(68, 68, 68);
 					width: 44%;
 					align-items: center;
-					height: calc(100%/17); // value seems to work
+					// height: calc(100%/17); // value seems to work
+					height: 100%;
 					// margin: 10px;
 					padding: 1% 2%;
 					border-top: 2px solid rgba(109, 109, 109, 0.2);
 					position: relative;
+					height: 32px;
+
+					.rating-bar {
+						height: 100%;
+						justify-content: space-around;
+					}
+					.rating-bar-row {
+						height: 50%;
+						justify-content: flex-end;
+						align-items: center;
+
+						.rating-title {
+							margin-right: 10px;
+						}
+					}
 
 					label {
 						color: black;
@@ -189,17 +208,17 @@
 						right: 7%;
 					}
 				
-					.half-height {
-						height: 17px !important;
-						width: 60% !important;
-					}
+					// .half-height {
+					// 	height: 17px !important;
+					// 	width: 60% !important;
+					// }
 
 					.rating-slider {
 						overflow: hidden;
 						-webkit-appearance: none;  /* Override default CSS styles */
 						appearance: none;
 						width: 50%; /* Full-width */
-						height: 25px; /* Specified height */
+						height: 85%;
 						background: rgb(220, 220, 220); /* Grey background */
 						outline: none; /* Remove outline */
 						opacity: 0.85; /* Set transparency (for mouse-over effects on hover) */
