--- a/client/src/components/styles/FeedbackModal.scss
+++ b/client/src/components/styles/FeedbackModal.scss
@@ -2,14 +2,44 @@
 	padding: 0px;
 }
 
+$brand-success: #5cb85c;
+$loader-size: 7em;
+$check-height: $loader-size/2;
+$check-width: $check-height/2;
+$check-left: ($loader-size/6 + $loader-size/12);
+$check-thickness: 3px;
+$check-color: $brand-success;
+
+.hidden {
+	opacity: 0;
+	pointer-events: none;
+}
+
+.loading-modal {
+	width: 300px !important;
+	height: 400px !important;
+	transition: 400ms all ease-in-out;
+	
+	.loading-success {
+		img {
+			filter: invert(43%) sepia(96%) saturate(1007%) hue-rotate(88deg) brightness(70%) contrast(119%);
+		}
+	}
+
+	.loading-failure {
+		img {
+			filter: invert(37%) sepia(93%) saturate(7471%) hue-rotate(356deg) brightness(91%) contrast(135%);
+		}
+	}
+}
+
 .feedback-modal {
 	justify-content: flex-start;
 	padding: 0;
-	// width: 65%;
-	// height: 87%;
+	width: 65%;
+	height: 87%;
 	max-width: 1300px;
 	max-height: 1000px;
-	min-width: 652px;
 
 	.feedback-col {
 		background: rgb(41, 41, 41);
@@ -21,6 +51,7 @@
 		// margin: 10px;
 		justify-content: flex-start;
 		align-items: center;
+		transition: 120ms opacity ease-in-out;
 
 		.title-text {
 			color: rgb(160, 10, 68);
@@ -34,7 +65,7 @@
 			margin: 10px 0;
 			font-size: 11pt;
 			color: rgb(196, 196, 196);
-			margin-top: 10px;
+			margin-top: 120ms;
 		}
 	}
 
@@ -44,6 +75,7 @@
 		min-width: 0;
 		width: 75%;
 		height: 100%;
+		transition: 100ms opacity ease-in-out;
 
 		.data-col {
 			height: 100%;
@@ -253,5 +285,73 @@
 			width: 100%;
 			margin: 20px 0;
 		}
+	}
+	.loading-box {
+		width: 100%;
+		height: 100%;
+		position: absolute;
+		top: 0;
+		min-width: 100px;
+		min-height: 100px;
+		display: flex;
+		flex-direction: column;
+		justify-content: center;
+		align-items: center;
+		transition: 200ms all ease-in-out;
+
+		img {
+			width: 100px;
+			height: 100px;
+		}
+
+		.checkmark {
+			display: none;
+			position: relative;
+			top: -26%;
+			left: -21%;
+			
+			&.draw:after {
+				animation-duration: 1500ms;
+				animation-timing-function: ease;
+				animation-name: checkmark;
+				transform: scaleX(-1) rotate(135deg);
+			}
+			
+			&:after {
+				opacity: 1;
+				height: $check-height;
+				width: $check-width;
+				transform-origin: left top;
+				border-right: $check-thickness solid $check-color;
+				border-top: $check-thickness solid $check-color;
+				content: '';
+				left: $check-left;
+				top: $check-height;
+				position: absolute;
+			}
+		}
+	}
+}
+
+@keyframes checkmark {
+	0% {
+		height: 0;
+		width: 0;
+		opacity: 1;
+	}
+	20% {
+		height: 0;
+		width: $check-width;
+		opacity: 1;
+	}
+	40% {
+		height: $check-height;
+		width: $check-width;
+		opacity: 1;
+	}
+	100% {
+		height: $check-height;
+		width: $check-width;
+		opacity: 1;
 	}
 }
