--- a/client/src/components/styles/SearchArea.scss
+++ b/client/src/components/styles/SearchArea.scss
@@ -6,81 +6,33 @@
 
 }
 
-.search-area-container {
-	width: 100%;
-	height: auto;
-	display: flex;
-	flex-direction: row;
-	background-color: var(--main_gray);
+// rewrite this as styled components for breakpoints OR CHAKRA?
+// will take time, outer component <SearchResultsContainer> is bare min for media queries for rn.
+.filters-title {
+	color: white;
+
+	.title-text {
+		margin-bottom: 16px;
+		font-size: 13pt;
+		font-weight: bold;
+	}
+	.desc-text {
+		font-size: 11pt;
+		// font-weight: bold;
+		padding: 10px;
+	}
 }
 
-.search-filters {
-	height: 100%;
-	width: 20%;
-	min-width: 320px;
-	padding: 10px;
-	display: flex;
-	flex-direction: row;
-	flex-wrap: wrap;
-	background-color: var(--main_light_gray);
-
-	.filters-title {
-		color: white;
-
-		.title-text {
-			margin-bottom: 16px;
-			font-size: 13pt;
-			font-weight: bold;
-		}
-		.desc-text {
-			font-size: 11pt;
-			// font-weight: bold;
-			padding: 10px;
-		}
-	}
-
-	.filter-section {
-		width: 100%;
-		.filter-title {
-			align-self: flex-start;
-			color: white;
-			background-color: rgb(30, 30, 30);
-			// position: absolute;
-			padding: 0 10px;
-			border-top-left-radius: 4px;
-			border-top-right-radius: 4px;
-			margin: 15px 0px 0 10px;
-			justify-self: flex-start;
-		}
-		.filter-options {
-			border-radius: 10px;
-			flex-wrap: wrap;
-			background-color: rgb(30, 30, 30);
-			padding: 8px;
-			.filter-button {
-				border: 1px solid rgb(20, 20, 20);
-				text-align: center;
-				margin: 0px;
-				border-radius: 2px;
-				width: 25%;
-				flex-grow: 1;
-				font-size: 10pt;
-				padding: 5px;
-				background-color: rgb(39, 39, 39);
-				color: white;
-				transition: 100ms all ease-in-out;
-
-				&:hover {
-					cursor: pointer;
-					background-color: rgb(184, 27, 79);
-				}
-			}
-			
-			.location-button {
-				padding: 4px;
-			}
-		}
-	}
+.filter-title {
+	align-self: flex-start;
+	color: white;
+	background-color: rgb(30, 30, 30);
+	// position: absolute;
+	padding: 0 10px;
+	border-top-left-radius: 4px;
+	border-top-right-radius: 4px;
+	margin: 15px 0px 0 10px;
+	justify-self: flex-start;
 }
 
 .search-results-container {
@@ -185,6 +137,7 @@
 }
 
 
+// Search filters and search results containers.
 @media only screen and (max-width: 768px) {
 	.search-area-container {
 		flex-direction: column;
