--- a/client/src/components/styles/FeedbackModal.scss
+++ b/client/src/components/styles/FeedbackModal.scss
@@ -34,6 +34,7 @@ $check-color: $brand-success;
 	}
 }
 
+.modal-bg {
 .feedback-modal {
 	justify-content: flex-start;
 	padding: 0;
@@ -173,9 +174,9 @@ $check-color: $brand-success;
 					position: absolute;
 					transform: translateY(50%);
 					align-items: center;
-					// height: 100%;
+					height: 70%;
 					z-index: 25;
-					
+
 					.tags-title-text {
 						position: absolute;
 						margin: 0;
@@ -344,6 +345,7 @@ $check-color: $brand-success;
 			transition: 200ms all ease-in-out;
 		}
 	}
+}
 }
 
 @keyframes checkmark {
