--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -100,6 +100,7 @@ html {
 	padding: 30px;
 	border-radius: 4px;
 	box-shadow: 0px 0px 12px 7px rgba(0, 0, 0, 0.25);
+	overflow-y: scroll;
 }
 
 .button-active {
