--- a/client/src/components/styles/JoinModal.scss
+++ b/client/src/components/styles/JoinModal.scss
@@ -1,23 +1,6 @@
-.join-modal {
-	width: 60%;
-	height: 70%;
-	padding: 15px;
-	background-color: rgb(30,30,30);
 
-	min-width: 756px; // TEMPORARY, ADD MEDIA QUERIES.
+
 	
-	.body-container {
-		width: 100%;
-		height: 100%;
-		justify-content: space-between;
-
-		.signup-form-col {
-			width: 50%;
-			height: 100%;
-			background-color: var(--main_gray);
-			border-radius: 5px;
-		}
-
 		.title-text-container {
 			align-items: center;
 			color: rgb(220, 220, 220);
@@ -191,13 +174,6 @@
 			width: 1px;
 		}
 	
-		.membership-col {
-			width: 50%;
-			height: 100%;
-			background-color: rgb(45, 45, 45);
-			border-radius: 5px;
-			justify-content: flex-start;
-			
 			.membership-container {
 				margin: 10px 25px;
 
@@ -278,29 +254,28 @@
 					}
 				}
 			}
-		}
-	}
-}
+		
+	
 
 
-.header-bar {
-	background: linear-gradient(-5deg, #BA3E3F, rgba(235, 69, 110, 1));
-	height: 12px;
-	width: 100%;
-	position: absolute;
-	top: 0px;
-	border-top-left-radius: 5px;
-	border-top-right-radius: 5px;
-}
+// .header-bar {
+// 	background: linear-gradient(-5deg, #BA3E3F, rgba(235, 69, 110, 1));
+// 	height: 12px;
+// 	width: 100%;
+// 	position: absolute;
+// 	top: 0px;
+// 	border-top-left-radius: 5px;
+// 	border-top-right-radius: 5px;
+// }
 
-.footer-bar {
-	// background-color: var(--main_magenta);
-	background: linear-gradient(-5deg, #BA3E3F, rgba(235, 69, 110, 1));
-	height: 12px;
-	width: 101%;
-	position: absolute;
-	bottom:-2px;
-	width: 100%;
-	border-bottom-right-radius: 5px;
-	border-bottom-left-radius: 5px;
-}
+// .footer-bar {
+// 	// background-color: var(--main_magenta);
+// 	background: linear-gradient(-5deg, #BA3E3F, rgba(235, 69, 110, 1));
+// 	height: 12px;
+// 	width: 101%;
+// 	position: absolute;
+// 	bottom:-2px;
+// 	width: 100%;
+// 	border-bottom-right-radius: 5px;
+// 	border-bottom-left-radius: 5px;
+// }
