--- a/client/src/components/styles/HomePage.scss
+++ b/client/src/components/styles/HomePage.scss
@@ -2,6 +2,14 @@
 	width: 100%;
 	height: 100vh;
 
+	.vanta-bg {
+		width: 100%;
+		height: 100%;
+		position: absolute;
+		z-index: 2;
+		pointer-events: none;
+	}
+
 	.homepage-image-container {
 		background: linear-gradient(0deg, rgb(218, 168, 181), #7598d8);
 		width: 100%;
@@ -54,6 +62,8 @@
 			align-items: center;
 
 			.user-account-button {
+				background-color: transparent;
+				border: none;
 				padding: 7px 35px;
 				justify-content: space-around;
 				// background-color: gray;
@@ -69,6 +79,11 @@
 				.user-account-image {
 					width: 35px;
 					height: 35px;
+				}
+
+				&:focus {
+					outline: none;
+					border: none;
 				}
 
 				&:hover {
@@ -89,6 +104,7 @@
 				transform-origin: top;
 				overflow: hidden;
 				transition: 1s cubic-bezier(0, 1, 0, 1);
+				z-index: 50;
 
 				.dropdown-item {
 					transition: 0.5s cubic-bezier(0, 1, 0, 1);
@@ -119,6 +135,19 @@
 			}
 		}
 
+
+		.floating-background {
+			position: absolute;
+			top: 50%;
+			left: 25%;
+			transform: translate(-50%, -50%);
+			pointer-events: none;
+			img {
+				width: 400px;
+			}
+			animation: expand 240s infinite alternate linear;
+		}
+
 		.main-content-container {
 			margin-bottom: 100px;
 			width: calc(100% - 100px);
@@ -127,6 +156,7 @@
 				width: 50%;
 				color: white;
 				font-family: "Open Sans", sans-serif;
+				z-index: 1;
 
 				.title-text {
 					font-size: 30pt;
@@ -252,5 +282,13 @@
 	}
 	to {
 		transform: translateY(-15px);
+	}
+}
+
+@keyframes expand {
+	from {
+		transform: scale(0.2)  translate(-50%, -50%);
+	} to {
+		transform: scale(5)  translate(-50%, -50%);;
 	}
 }
